--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 			<a href="#"><img class="logo" src="images/winnipeg-logo.png" alt="hello" ></a>
 			<div class="sidenavcontainer">
 				<ul>
-					<li><a href="#">Home</li></a>
-					<li><a href="#">Contact Us</li><a>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Contact Us<a></li>
 				</ul>
 			</div>
 			<div class="topnavcontainer">
-				<ul style="list-style-type: none;">
-		  			<li><a href="#"><b>Warehousing Winnipeg</b></li></a>
-  					<li><a href="#"><b>Winnipeg manitoba warehousing</b></li></a>
-  					<li><a href="#"><b>Warehouse Distribution in Winnipeg</b></li></a>
-  					<li><a href="#"><b>Commercial Warehousing</b></li></a>
+				<ul>
+		  			<li><a href="#"><b>Warehousing Winnipeg</b></a></li>
+  					<li><a href="#"><b>Winnipeg manitoba warehousing</b></a></li>
+  					<li><a href="#"><b>Warehouse Distribution in Winnipeg</b></a></li>
+  					<li><a href="#"><b>Commercial Warehousing</b></a></li>
 				</ul>
 			</div>
 	</div>
@@ -37,26 +37,43 @@
 		</div>
 		<div class="leftbox">
 			<div class="upperbox">
-			<span style="font-size: 18px">Welcome to <span style="color:cyan">Winnipeg Warehousing</span></span>
-			<img src="images/heading-bottom-bg.png" style="max-width: 100%;">
-			<img src="images/sample-img.png" style="float:left;margin-right: 8px;max-width: 30%">
-			<p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed condimentum, risus non pharetra vestibulum, metus quam porttitor magna, sit amet pellentesque dui sapien vitae orci. Fusce cursus tortor ipsum, fermentum tincidunt magna dapibus sit amet.Fusce cursus tortor ipsum, fermentum tincidunt magna dapibus sit amet.   </p>
+				<h1 style="font-size: 14px;  background:url('images/heading-bottom-bg.png') no-repeat bottom;">Welcome To <span style="color:cyan">Winnipeg Warehousing</h1>
+				<img src="images/sample-img.png" style="float:left;margin-right: 6px;max-width: 30%">
+				<p style="font-size:13px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed condimentum, risus non pharetra vestibulum, metus quam porttitor magna, sit amet pellentesque dui sapien vitae orci. Fusce cursus tortor ipsum, fermentum tincidunt magna dapibus sit amet.Fusce cursus tortor ipsum, fermentum tincidunt magna dapibus sit amet.   </p>
 			</div>
 			<div class="belowbox">
 				<div class="canada">
-				<span style="font-size:18px;color:cyan">Cananda Warehousing</span>
-				<img src="images/heading-bottom-bg.png" style="max-width: 100%">
-				<img src="images/canada-warehousing.jpg" style="padding:3px;max-width: 100%">
-				<p style="font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed condimentum, risus non pharetra vestibulum, metus quam porttitor magna, sit amet pellentesque dui sapien vitae orci. </p>			
+					<span style="font-size:14px;color:cyan">Cananda Warehousing</span>
+					<img src="images/heading-bottom-bg.png" style="max-width: 100%">
+					<img src="images/canada-warehousing.jpg" style="padding:3px;max-width: 100%">
+					<p style="font-size:13px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed condimentum, risus ad</p>
+					<button class="button"><i>Read more</i></button>			
 				</div>
 				<div class="manitoba">
-				<span style="font-size:18px;color:cyan">Manitoba Distribution Center</span>
-				<img src="images/heading-bottom-bg.png" style="max-width: 100%">					<img src="images/manitoba-distribution-center.jpg" style="padding:3px;max-width: 100%">
-				<p style="padding:1px;font-size:12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed condimentum, risus non pharetra vestibulum, metus quam porttitor magna, sit amet pellentesque dui sapien vitae orci. </p>			
+					<span style="font-size:14px;color:cyan">Manitoba Distribution Center</span>
+					<img src="images/heading-bottom-bg.png" style="max-width: 100%">					<img src="images/manitoba-distribution-center.jpg" style="padding:3px;max-width: 100%">
+					<p style="padding:1px;font-size:13px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed condimentum, risus ad</p>	
+					<button class="button"><i>Read more</i></button>			
 				</div>
 			</div>
 		</div>
 	</div>	
+	<div>
+		<img src="images/content-bottom-bg.png" style="max-width: 100%">
+	</div>
+	<div class="lastnav">
+		<ul style="">
+ 			<li><a href="#">Home</a></li>
+ 			<li><a href="#">Warehousing Winnipeg</a></li>
+  			<li><a href="#">Winnipeg manitoba warehousing</a></li>
+  			<li><a href="#">Warehouse Distribution in Winnipeg</a></li>
+  			<li><a href="#">Commercial Warehousing</a></li>
+ 			<li><a href="#">Contact Us</a></li></br>
+		</ul>
+	</div>
+	<div style="max-width: 100%; font-size: 10px;text-align: left">
+		<span style="font-size: 14px">©</span> 2013 WinnipegWarehousiing.net All rights reserved
+	</div>
 </div>
 </body>
 </html>
